changed hashmap to use ColorEnum instead of String